
Next Release
------------

- Fixed a missing import in the blob cache cleanup code.

1.5.0a1 (2010-10-21)
--------------------

- Added an option to store ZODB blobs in the database.  The option is
  called "shared-blob-dir" and it behaves very much like the ZEO
  option of the same name.  Blobs stored in the database are broken
  into chunks to reduce the impact on RAM.

- Require setuptools or distribute.  Plain distutils is not sufficient.

1.4.1 (2010-10-21)
------------------

- Oracle: always connect in threaded mode.  Without threaded mode,
  clients of Oracle 11g sometimes segfault.

1.4.0 (2010-09-30)
------------------

- Made compatible with ZODB 3.10.0b7.

- Enabled ketama and compression in pylibmc_wrapper.  Both options
  are better for clusters.  [Helge Tesdal]

- Oracle: Use a more optimal query for POSKeyError logging.  [Helge Tesdal]

- Fixed a NameError that occurred when getting the history of an
  object where transaction extended info was set.  [Helge Tesdal]

1.4.0c4 (2010-09-17)
--------------------

- Worked around an Oracle RAC bug: apparently, in a RAC environment,
  the read-only transaction mode does not isolate transactions in the
  manner specified by the documentation, so Oracle users now have to
  use serializable isolation like everyone else. It's slower but more
  reliable.

- Use the client time instead of the database server time as a factor
  in the transaction ID.  RelStorage was using the database server time
  to reduce the need for synchronized clocks, but in practice, that
  policy broke tests and did not really avoid the need to synchronize
  clocks.  Also, the effect of unsynchronized clocks is predictable
  and manageable: you'll get bunches of transactions with sequential
  timestamps.

- If the database returns an object from the future (which should never
  happen), generate a ReadConflictError, hopefully giving the application
  a chance to recover.  The most likely causes of this are a broken