@@ -17,6 +17,7 @@
 See README.txt for details.
 """
 
+import logging
 import optparse
 from persistent.TimeStamp import TimeStamp
 from StringIO import StringIO
@@ -34,6 +35,11 @@ schema_xml = """
     required="yes" />
 </schema>
 """
+
+log = logging.getLogger("relstorage.zodbconvert")
+logging.basicConfig(
+    level=logging.INFO,
+    format="%(asctime)s %(levelname)s:%(name)s: %(message)s")
 
 
 def storage_has_data(storage):
@@ -70,38 +76,53 @@ def main(argv=sys.argv, write=sys.stdout.write):
     source = config.source.open()
     destination = config.destination.open()
 
-    write("Storages opened successfully.\n")
+    #write("Storages opened successfully.\n")
+    log.info("Storages opened successfully.")
 
     if options.dry_run:
-        write("Dry run mode: not changing the destination.\n")
+        #write("Dry run mode: not changing the destination.\n")
+        log.info("Dry run mode: not changing the destination.")
         if storage_has_data(destination):
-            write("Warning: the destination storage has data\n")
+            #write("Warning: the destination storage has data\n")
+            log.warning("The destination storage has data.")
         count = 0
         for txn in source.iterator():
             write('%s user=%s description=%s\n' % (
                 TimeStamp(txn.tid), txn.user, txn.description))
             count += 1
-        write("Would copy %d transactions.\n" % count)
+        #write("Would copy %d transactions.\n" % count)
+        log.info("Would copy %d transactions.", count)
 
     else:
         if options.clear:
+            log.info("Clearing old data...")
             if hasattr(destination, 'zap_all'):
                 destination.zap_all()
             else:
                 msg = ("Error: no API is known for clearing this type "
                        "of storage. Use another method.")
                 sys.exit(msg)
+            log.info("Done clearing old data.")
 
         if storage_has_data(destination):
             msg = "Error: the destination storage has data.  Try --clear."
             sys.exit(msg)
 
-        destination.copyTransactionsFrom(source)
+        log.info("Started copying transactions...")
+        log.info("This will take long...")
+        #destination.copyTransactionsFrom(source)
+        num_txns, size, elapsed = destination.copyTransactionsFrom(source)
+        log.info("Done copying transactions.")
+        log.info("Closing up...")
 
         source.close()
         destination.close()
 
-        write('All transactions copied successfully.\n')
+        rate = (size/float(1024*1024)) / elapsed
+        #write('All %d transactions copied successfully in %4.1f minutes at %1.3fmB/s.\n' %
+        #      (num_txns, elapsed/60, rate))
+        log.info('All %d transactions copied successfully in %4.1f minutes at %1.3fmB/s.',
+                 num_txns, elapsed/60, rate)
 
 
 if __name__ == '__main__':
